# Educational

./: .gitignore  O curso completo de Banco de Dados e SQL UDEMY_RESUMO.docx  README.md
College/Statistics/UC01 - Sampling Techniques and Experiments Planning/: README.md  UAM_UC02_Atividade_Pratique.ipynb
College/Statistics/UC01 - Sampling Techniques and Experiments Planning/Exam 3 (A3)/amostragem-avaliacao_3/: README.md  UC01_AC03.ipynb  pyproject.toml
College/Statistics/UC01 - Sampling Techniques and Experiments Planning/laboratory (Pratique)/: README.md  UAM_UC02_Atividade_Pratique.ipynb  pyproject.toml
Curso PLN - USP/: Curso_PLN_USP.ipynb
Faculdade/: Álgebra_Linear_Impacta.ipynb
Faculdade/Data Structure and Algorithms/: refNoA.java
Faculdade/Data Structure and Algorithms/ListaDeExercícios1/: Ex20.java
Udemy/Academia Estatística/Seção 8 - Relatórios Rmarkdown/: 11+-+Décimo+primeiro+relatorio+-+Dashboard-++R+Markdown.txt
Udemy/Curso DataScience e Python (primeiro)/: Análise de Churn.ipynb  Análise de tempo.ipynb
Udemy/Power-BI/: Ex_prático_4.pbix  HPIAdmins_realstate_dashboard.pbix
Udemy/Power-BI/Exercícios_práticos/: Ex_prático_3.pbix
Udemy/Power-BI/Parte 2 - Get and Transform Data/: Practice_activity_number_10.pbix  (+1 more)
bootcamp-node.js/: .env  módulo 3 - banco de dados.rar  package-lock.json  package.json
bootcamp-node.js/Trabalho_Pratico_modulo_1/: package.json
bootcamp-node.js/desafio_modulo_1/: index.js  nodemon.json  package-lock.json  package.json
bootcamp-node.js/my-bank-api/: package.json
bootcamp-node.js/my_bank_api/: index.js
(+194 files in other folders)
