[tool.poetry]
name = "amostragem-avaliacao-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandoc = "^2.3"
nbconvert = "^7.16.4"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
